--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/server.js",
     "seed": "ts-node ./scripts/seed-user.ts",
     "lint": "eslint . --ext .ts",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "login-and-set-token": "ts-node ./scripts/loginAndSetToken.ts"
   },
   "dependencies": {
@@ -20,8 +20,10 @@
     "@types/swagger-ui-express": "^4.1.8",
     "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^10.0.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
@@ -45,7 +47,7 @@
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0",
+    "uuid": "^8.3.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
@@ -60,6 +62,7 @@
     "eslint": "^8.46.0",
     "jest": "^29.7.0",
     "prom-client": "^15.1.3",
+    "socket.io-client": "^4.8.1",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "ts-node-dev": "^2.0.0",
