--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "downlevelIteration": true
   },
   "include": ["src/**/*", "tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests"]
 }
