--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.10",
@@ -15,9 +16,12 @@
     "@types/node": "^18.17.17",
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io-client": "^3.0.0",
+    "antd": "^5.27.4",
+    "dayjs": "^1.11.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "recharts": "^3.2.1",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
