--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "login-and-set-token": "ts-node ./scripts/loginAndSetToken.ts"
   },
   "dependencies": {
+    "@sentry/node": "^10.15.0",
     "@types/cors": "^2.8.19",
     "@types/express-session": "^1.18.2",
     "@types/socket.io": "^3.0.1",
@@ -22,6 +23,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "dotenv": "^16.3.1",
